--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "gsap": "^3.13.0",
+    "lucide": "^0.552.0",
     "lucide-react": "^0.552.0",
+    "maath": "^0.10.8",
     "next": "16.0.1",
     "next-themes": "^0.4.6",
+    "next-view-transitions": "^0.3.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.181.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
