--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-view-transitions": "^0.3.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "three": "^0.181.0"
